adjusts size and contrast of zoom markers, fixed top space inside photo compare when there is no caption

--- a/styleguide/src/sass/_mixins.scss
+++ b/styleguide/src/sass/_mixins.scss
@@ -329,3 +329,8 @@ http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacemen
 .no-caption {
   margin-bottom: rhythm(1);
 }
+
+%top-space,
+.top-space {
+  margin-top: rhythm(1);
+}
